data/derived/sp14/progs/unify/prog2169.ml.out
Characters 19-30:
  let _ = palindrome "malayalam";;
                     ^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
